# slide_window

./: .gitignore  cmakeLists.txt
bak/: Estimator01.cpp  estimator.cpp  estimator_node.cpp  imu_factor_test.cpp  integration_base.h  parameters.h  stereo_reprojection_factor.h
bak/imufactor/: imu_factor.h
data/: imupreint.yml  imupreint_localwindow.yml  kf_cur_preint.yml  pis.txt  stereo_prj.yml
data/101/: imupreint.yml  stereo_prj.yml
data/1210/: imupreint.yml  stereo_prj.yml
data/1220/: imupreint.yml  str_prj_testdata 1220.yml
data/1226/: imupreint.yml  navstates.yml
data/v103/1227/001/: imupreint.yml  navstates.yml  str_prj_testdata.yml
notes/: 11212017  11242017.txt  11282017.txt  1208.txt  Logs.hpp  stereo_projection_factor.cpp
src/: CMakeLists.txt  estimator.cpp  estimator.h  parameters.cpp  parameters.h  vins_simple.cpp
src/factor/: imu_factor.bak.h  imu_factor.h  readme.txt  stereo_projection_factor.cpp  stereo_projection_factor.hpp
src/utility/: Converter.cc  Converter.h
